[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigprofiler_mcp"
version = "0.1.0"
description = "MCP server exposing SigProfilerMatrixGenerator, SigProfilerAssignment, SigProfilerExtractor, and sigProfilerPlotting as tools for LLM clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.28.1",
    "SigProfilerMatrixGenerator>=1.3.6",
    "SigProfilerAssignment>=1.1.1",
    "SigProfilerExtractor>=1.2.6",
    "sigProfilerPlotting>=1.4.2",
]

[project.scripts]
sigprofiler-mcp = "sigprofiler_mcp.server:main"
